--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
